compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_opaque_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 43
expression: "import one\n\npub fn main() {\n  one.Two\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:4:6
  │
4 │   one.Two
  │      ^^^^

The module `one` does not have a `Two` field.

